[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player/PlayerSplatteredFX.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 37.7485, 38.5556 )

[sub_resource type="CircleShape2D" id=3]

radius = 39.6315

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.803922, 0.180392, 0.180392, 1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GrabBlockArea" type="Area2D" parent="."]
position = Vector2( 69.3748, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabBlockArea"]
position = Vector2( 3.07355, 0.439083 )
shape = SubResource( 2 )

[node name="BlockCarryingPos" type="Position2D" parent="."]
position = Vector2( 0, -111.952 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="FX" type="Node2D" parent="."]

[node name="Splatter" parent="FX" instance=ExtResource( 3 )]
position = Vector2( -0.462211, 0 )
z_index = 1
emitting = false

[connection signal="body_entered" from="GrabBlockArea" to="." method="_on_GrabBlockArea_body_entered"]
[connection signal="body_exited" from="GrabBlockArea" to="." method="_on_GrabBlockArea_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
